# ts_test

./: .gitignore  .justfile  README.md  app.py  appm.py  config.file.json  config.json  config.meta.json  config.raw.json  dynamic_extract_data_to_ts.py  extract_wallet.py  gmgn.json  llm.py  meta.json  nl2query.py  pyproject.toml  setup.py  sol_smart_wallet.json  trend2.json  tvl.json  tvl.md  tvl_defillama.json  tvl_fp.json  utils.py
src/: app.py  llm.py  nl2query.py  run_convert_ts.py  run_metadata.py
src/data/: config.file.json  config.json  trend.json  tvl_defillama.json
src/extractors/: base.py  generic.py  registry.py
src/models/: metadata.py  metrics.py
src/services/: metadata_generator.py
src/ts_test/: __init__.py
src/utils/: formatters.py  json_path.py  time.py  utils.py
