[project]
name = "ts-test"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "no7david", email = "no7david@gmail.com" }
]
dependencies = [
    "taospy>=2.7.21",
    "openai>=1.59.4",
    "motor>=3.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ts_test"]
